# TrayPumpkin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  config.yaml  example-config.ini
.github/workflows/: binary-release.yml
cmake/: Packing.cmake
packaging/: default-config.yaml  install.sh  tray-pumpkin.desktop
src/: AppConfig.cpp  AppConfig.h  ConfigFinder.cpp  ConfigFinder.h  TrayController.cpp  TrayController.h  main.cpp
